--- a/refs.bib
+++ b/refs.bib
@@ -87,3 +87,44 @@ publisher = {The MathWorks Inc.},
   keywords     = "MOVI, CUMULI",
   url          = "http://lear.inrialpes.fr/pubs/2000/TMHF00"
 }
+
+@INPROCEEDINGS{Zhang04extrinsiccalibration,
+    author = {Qilong Zhang},
+    title = {Extrinsic calibration of a camera and laser range finder},
+    booktitle = {In IEEE International Conference on Intelligent Robots and Systems (IROS},
+    year = {2004},
+    pages = {2004}
+}
+
+@TECHREPORT{Unnikrishnan_fastextrinsic,
+    author = {Ranjith Unnikrishnan and Martial Hebert},
+    title = {Fast extrinsic calibration of a laser rangefinder to a camera},
+    institution = {},
+    year = {}
+}
+
+@MISC{Horaud_hand-eyecalibration,
+    author = {Radu Horaud and Fadi Dornaika},
+    title = {Hand-Eye Calibration },
+    year = {}
+}
+
+@INPROCEEDINGS{Dynamic_camera_calibration,
+author={Huang, C.T. and Mitchell, O.R.},
+booktitle={Computer Vision, 1995. Proceedings., International Symposium on},
+title={Dynamic camera calibration},
+year={1995},
+pages={169-174},
+keywords={calibration;cameras;charge-coupled devices;computer vision;parameter estimation;CCD cameras;bundle adjustment;calibration block;camera parameters;close range camera calibration scheme;dynamic camera calibration;dynamic scheme;multiple digitized images;scaled dimensions;static scheme;stereo cameras;unknown motion;unknown object;Calibration;Charge coupled devices;Charge-coupled image sensors;Focusing;Intelligent systems;Nonlinear distortion;Pixel;Robot vision systems;Shape;Smart cameras},
+doi={10.1109/ISCV.1995.476996},}
+
+
+@INPROCEEDINGS{4587681,
+author={Furukawa, Y. and Ponce, J.},
+booktitle={Computer Vision and Pattern Recognition, 2008. CVPR 2008. IEEE Conference on},
+title={Accurate camera calibration from multi-view stereo and bundle adjustment},
+year={2008},
+pages={1-8},
+keywords={calibration;cameras;image resolution;stereo image processing;camera calibration;camera parameter estimates;geometric fidelity;high-resolution digital cameras;image-based modeling;multiview stereo-bundle adjustment;standard bundle adjustment algorithm;Calibration;Computer science;Digital cameras;Layout;Lenses;Nonlinear distortion;Parameter estimation;Robustness;Solid modeling;Testing},
+doi={10.1109/CVPR.2008.4587681},
+ISSN={1063-6919},}
