--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -6,12 +6,16 @@
 
 
 
-\begin{center}
-\begin{quote}
-\it Research is what I'm doing when I don't know what I'm
-doing.\,\ldots
-\end{quote}
-\end{center}
-\hfill{\small Werner von Braun}
+
+
+% \begin{center}
+% \begin{quote}
+% \it Research is what I'm doing when I don't know what I'm
+% doing.\,\ldots
+% \end{quote}
+% \end{center}
+% \hfill{\small Werner von Braun}
+
+
 
 \end{abstract}
