--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,3 +1,17 @@
-% \chapter{Code?}
-% TODO:...
-% At least the Ceres cost function... (or maybe I can put it in Implementation details)
+\chapter{Future work}
+\label{cha:future}
+
+Since the ROS package describe in this thesis is still in development stage many things need to be improved. Some direction of what is needed to be done will be list it in this chapter.
+
+\begin{itemize}
+ \item The highest priority is to fix triangulation in order to get a better structure initialization, this will lead a considerable improvement in the whole calibration system.
+
+%  \item Use another initialization for the $[R_i t_i]$... TODO...
+
+ \item User interface is require to make the package more useful.
+
+ \item The system should be robot agnostic. There is a wizard in the new Moveit! package that can be used it to create the configuration files.
+
+ \item Export URDF to file is missing. I have fixed some bugs in the URDFDom package that will let do this very easily.
+
+\end{itemize}
