--- a/tex/technical_background.tex
+++ b/tex/technical_background.tex
@@ -1,14 +1,98 @@
-\chapter{Technical background}
+\chapter{Background}
+\label{cha:background}
+
+The background will be divided in two sections: a \textbf{theoretical background} discussed in section~\ref{sec:theoretical_background}, and a \textbf{technical background} in section~\ref{cha:technical_background}
+
+\section{Theoretical background}
+\label{sec:theoretical_background}
+
+% This section is a short introduction of the notation and theory used for the rest of the thesis.
+
+\subsection{Pinhole camera model}
+
+A 2D point is denoted by $\x = [x,y]^T$. A 3D point is denoted by $\X = [X,Y,Z]^T$. It is used $\x = [x,y,1]^T$ to denote the point in homogeneous coordinate (augmented vector by adding~$1$ as the last element) and $\X = [X,Y,Z,1]^T$. A camera is modeled by the usual pinhole: the relationship between a 3D point $\X$ and its image projection $\x$ is given by
+\begin{equation} \label{eq:pinhole}
+  s\,\x = K\, [R ~~ t]\,\X \quad \mbox{with } K =
+    \begin{pmatrix}
+      f_x & 0   & c_x \\
+      0   & f_y & c_y \\
+      0   & 0   & 1
+\end{pmatrix}
+\end{equation}
+
+\noindent
+where $s$ is an arbitrary scale factor; $(R,t)$ called the extrinsic parameters, is the rotation and translation which relates the world coordinate system to the camera coordinate system; $K$ is called the camera intrinsic matrix, and $(c_x,c_y)$ are the coordinates of the principal point, $f_x$ and $f_y$ are the focal lengths expressed in pixel units.
+
+
+
+
+\subsection{Bundle adjustment}
+\label{sec:BA}
+
+Needing to estimate relative poses of several cameras or many poses of a single moving camera is a common problem. It is often solved by jointly estimating the set of camera poses along with 3D features that are detected by some set of cameras. This approach is called bundle adjustment (BA) \cite{BA}.
+
+Bundle adjustment algorithms take the following three data as inputs (see Figure~\ref{fig:BA}):
+\begin{itemize*}
+ \item a set of $n$ 3D point positions $X_1, X_2, \dots, X_n$,
+ \item $m$ camera parameters $P_1, P_2, \dots, P_m$,
+ \item and the positions of the projections $x_{ij}$ (measurements) of the points $Xi$ in the camera $Pj$ where they are visible.
+\end{itemize*}
+
+\begin{figure}[!htbp]
+ \centering
+ \includegraphics[width=0.45\textwidth]{images/BA.pdf}
+ \caption{Three points $X_1, X_2, X_3$ are observed by three cameras $P_1, P_2, P_3$.}
+ \label{fig:BA}
+\end{figure}
+
+\noindent
+Bundle adjustment optimize both the scene $X_i$ and camera parameters $P_j$ by minimizing the sum of squared re-projection errors:
+\[
+ \sum _{i=1}^{n}\sum _{j\in V_{i}}\left( x_{ij}-P_{i}X_{j}\right)^2
+\]
+
+\noindent
+\textbf{Note:} Ceres Solver has been utilized to solve this optimization problem, see section \ref{sec:ceres} for a short introduction to Ceres and section \ref{sec:ceres_impl} to see the cost function used in the later defined estimation process.
+
+
+\subsection{Triangulation}
+\label{sec:triangulation}
+
+A simple linear triangulation methods is described \cite{HZ2}. Measurement $\x = P \, \X , \mathbf{\tilde{x'}} = P' \, \mathbf{\tilde{X}}$ can be combined to form a linear equation: $A\, \X = 0$. The homogeneous scale factor is eliminated by a cross product $\x = P\,\X$ to give equations that form the following equation system:
+\begin{equation}
+A =
+\begin{pmatrix}
+  x \mathbf{p}^{3T} - \mathbf{p}^{1T} \\
+  y \mathbf{p}^{3T} - \mathbf{p}^{2T} \\
+  x' \mathbf{p}^{3T} - \mathbf{p}^{1T} \\
+  y' \mathbf{p}^{3T} - \mathbf{p}^{2T}
+\end{pmatrix}
+\end{equation}
+where $\mathbf{p}^{iT}$ are the rows of P. Then the system $A\, \X = 0$ is solved with SVD\footnote{Singular Value Decomposition} as it is explained in \cite{HZ2}.
+
+
+
+
+\subsubsection{N-View Triangulation}
+\label{sec:nview_triangulation}
+
+It is easy to extend this methods for multiple views by adding more rows to the matrix $A$. Implementation in section \ref{sec:triangulation_impl}.
+
+
+
+
+
+\section{Technical background}
 \label{cha:technical_background}
 
-In this chapter, a briefly explanation of the used tools is given: ROS (Robot Operating System)~\cite{ROS}, RViz (ROS visualizer) \cite{RViz}, KDL (Kinematics and Dynamics Library) \cite{KDL}, Ceres Solver (non-linear least squares minimizer) \cite{ceres} and others.
+In this section, a briefly explanation of the used tools is given: ROS (Robot Operating System)~\cite{ROS}, RViz (ROS visualizer) \cite{RViz}, KDL (Kinematics and Dynamics Library) \cite{KDL}, Ceres Solver (non-linear least squares minimizer) \cite{ceres} and others.
 
 Links to the official documentation is provided for further reading. This chapter does not intend to be a full documentation of each component, since their developments is very dynamic.
 
 This chapter is focused in individual explanations, and in further chapters, the relationship between these tools will be provided.
 
 \vspace*{-0.5ex}
-\section{ROS}
+\subsection{ROS}
 \label{sec:ros}
 
 ROS provides standard \textbf{operating system} services such as hardware abstraction, low-level device control, implementation of commonly-used functionality, message-passing between processes, and package management.
@@ -25,11 +109,11 @@ Summarizing ROS has two basic \textit{sides}:
 
 The main goal of this thesis is to be a \textbf{ROS calibration package}, in replacement of the old one \cite{pr2_calibration}. For further learning about ROS, an excellent documentation can be found in: \url{www.ros.org}.
 
-\subsection{Nodes and Topics}
+\subsubsection{Nodes and Topics}
 \label{sec:nodes}
 Packages is a set of nodes, and topics are named buses over which nodes exchange messages.
 
-\subsection{RViz}
+\subsubsection{RViz}
 \label{sec:rviz}
 
 It is a 3D visualization tool for ROS. It is used to visualize \textbf{/tf} (section \ref{sec:tf}) and \textbf{URDF} robot models (section \ref{sec:urdf}). Sending messages with basic shapes (cube, sphere, cylinder, arrow) to RViz is also possible. These Visual markers are used to display 3D points, see Figure \ref{fig:rviz}. For more information: \url{http://www.ros.org/wiki/rviz}.
@@ -41,7 +125,7 @@ It is a 3D visualization tool for ROS. It is used to visualize \textbf{/tf} (sec
 \end{figure}
 
 \vspace*{-2ex}
-\subsection{Roscpp}
+\subsubsection{Roscpp}
 \label{sec:roscpp}
 
 Another primary ROS goal is \textit{``language independence''}: the ROS framework is easy to implement in any modern programming language, and it is already implemented in:
@@ -50,7 +134,7 @@ Another primary ROS goal is \textit{``language independence''}: the ROS framewor
  \item C++ (\url{http://www.ros.org/wiki/roscpp}).
 \end{itemize*}
 
-\subsection{PR2}
+\subsubsection{PR2}
 \label{sec:PR2}
 
 The PR2 (Personal Robot, version 2) is a Willow Garage which has two 7-DOF arms with a payload of 1.8 kilograms (1,800 g). Sensors include a 5 megapixel camera, a tilting laser range finder, and an inertial measurement unit. The ``texture projector'' projects a pattern on the environment to create 3D information for capture by the cameras. Also Microsoft Kinect can be head-mounted. In this work, its head (see left on Figure \ref{fig:pr2}) is the most important since all the cameras are located there and most be calibration to each other.
@@ -62,7 +146,7 @@ The PR2 (Personal Robot, version 2) is a Willow Garage which has two 7-DOF arms 
 \end{figure}
 
 \vspace*{-1ex}
-\subsection{URDF}
+\subsubsection{URDF}
 \label{sec:urdf}
 
 The URDF (\textbf{U}nified \textbf{R}obot \textbf{D}escription \textbf{F}ormat) is an XML format for representing a robot model. The package also contains a C++ parser, and it can be visualize with RViz (see in Figure~\ref{fig:pr2_urdf}).
@@ -75,7 +159,7 @@ For more information: \url{http://www.ros.org/wiki/urdf}.
 \end{figure}
 
 
-\subsection{/tf}
+\subsubsection{/tf}
 \label{sec:tf}
 
 The package /tf lets the user keep track of multiple coordinate frames over time. /tf maintains the relationship between coordinate frames in a tree structure buffered in time, and lets the user transform points, vectors, etc between any two coordinate frames at any desired point in time.
@@ -100,7 +184,7 @@ For more information: \url{http://www.ros.org/wiki/tf}.
 \end{figure}
 
 
-\subsection{ROS bag and rqt}
+\subsubsection{ROS bag and rqt}
 \label{sec:rosbag}
 
 All the components for a simulated environment are implemented, and it is needed a way to reproduce events/messages. This is performed by ROS bag, which is a set of tools for recording from and playing back to ROS topics. It avoids deserialization and reserialization of the messages. More info: \url{http://www.ros.org/wiki/rosbag}.
@@ -121,9 +205,9 @@ A second tool described here is a rqt plugin which allows to play a ROS bag easi
  \label{fig:rosbag02}
 \end{figure}
 
-\subsection{Image\_proc\_node}
+\subsubsection{Image\_proc\_node}
 
-The node \texttt{image\_proc} sit between the camera driver and vision processing nodes (see Figure \ref{fig:img_proc02}). \texttt{image\_proc} removes camera distortion from the raw image stream, and if necessary will convert Bayer or YUV422 format image data to color
+The node \texttt{image\_proc} sit between the camera driver and vision processing nodes (see Figure~\ref{fig:img_proc02}). \texttt{image\_proc} removes camera distortion from the raw image stream, and if necessary will convert Bayer or YUV422 format image data to color
 
 \begin{figure}[!htbp]
  \centering
@@ -138,7 +222,7 @@ All processing is on demand. Color processing is performed only if there is a su
 More info: \url{http://www.ros.org/wiki/image_proc}.
 
 
-\subsection{Camera model in ROS}
+\subsubsection{Camera model in ROS}
 
 Figure \ref{fig:camera_model02} is a diagram of the camera coordinate system assumed. It is a right-handed system, with the world X and Y aligned with the image x and y.
 
@@ -153,7 +237,8 @@ The camera model used in ROS is the same coordinate system used in OpenCV. It di
 
 More info: \url{http://www.ros.org/wiki/image_pipeline/CameraInfo}.
 
-\subsubsection{Derivation diagram}
+\noindent
+\textbf{Derivation diagram}
 
 Figure \ref{fig:camera_model03} is a diagram of the various images that are conceptually derivable from the CameraInfo message\footnote{CameraInfo message is a ROS message where all the camera information is saved.}. The boxed variables are present in this message.
 
@@ -164,7 +249,8 @@ Figure \ref{fig:camera_model03} is a diagram of the various images that are conc
  \label{fig:camera_model03}
 \end{figure}
 
-\subsubsection{Projection onto the original image}
+\noindent
+\textbf{Projection onto the original image}
 
 Starting with an initial 3D point $X$, the position of the corresponding image point is found by going right-to-left in the upper half of the diagram \ref{fig:camera_model03}. The process is summarized by the following equations:
 \[
@@ -178,7 +264,8 @@ q  &=& Kx*       & \quad \quad \texttt{pixel coordinates}
 This process uses the $K$ camera matrix and $D$ distortion vector. Ignoring the transform $T$, the projection of a point $X$' can be found into the original camera frame using these equations. First, the $3D$ point $X$' is projected onto the normalized, undistorted image via a projection operation (division by $Z$). Then the distortion coefficients are used in the function $d()$ to move the point to its distorted position, still in a normalized image. Finally, the normalized image is converted to a pixel-coordinate image by applying the camera matrix to each image point.
 
 
-\subsubsection{Rectification}
+\noindent
+\textbf{Rectification}
 \label{sec:rectification}
 In this context, rectification is the process of transforming the input image into an output image with the distortion corrected (Figure \ref{fig:camera_model03}), and optionally transformed by rotation, in-plane translation, and scale.
 
@@ -202,7 +289,7 @@ An example of this process can be seen in Figure \ref{fig:rectification}.
 
 
 
-\section{KDL}
+\subsection{KDL}
 \label{sec:KDL}
 
 KDL (\textbf{K}inematics and \textbf{D}ynamics \textbf{L}ibrary) defines a tree structure to represent the kinematic and dynamic parameters of a robot mechanism (see Figure \ref{fig:KDL}). \textit{kdl\_parser} provides tools to construct a KDL tree from an XML robot representation in URDf format.
@@ -223,7 +310,7 @@ This library is mainly used for:
 
 For more information: \url{http://www.ros.org/wiki/kdl}.
 
-\section{Ceres Solver}
+\subsection{Ceres Solver}
 \label{sec:ceres}
 
 Ceres Solver \cite{ceres} is a portable C++ library that allows modeling and solving large complicated \textbf{non-linear least squares} problems. It is used at Google to estimate the pose of Street View cars, aircrafts, and satellites; to build 3D models for PhotoTours; to estimate satellite image sensor characteristics, and more.
@@ -238,7 +325,7 @@ Ceres Solver is an important component in this thesis because it has very good f
 
 It will too long to make a good introduction to Ceres, but a briefly description of important points, obtained from the tutorial, can be found in the following. The excellent tutorial is available in: \url{http://homes.cs.washington.edu/~sagarwal/ceres-solver/tutorial.html}.
 
-\subsection*{Modeling}
+\subsubsection*{Modeling}
 Ceres solves robustified non-linear least squares problems of the form:
 \begin{equation}
 \frac{1}{2}\sum_{i=1} \rho_i\left(\left\|f_i\left(x_{i_1}, ... ,x_{i_k}\right)\right\|^2\right).
@@ -251,17 +338,17 @@ $\rho_i$ is a \texttt{LossFunction}. A \texttt{LossFunction} is a scalar functio
  \frac{1}{2}\sum_{i=1} \left\|f_i\left(x_{i_1}, ... ,x_{i_k}\right)\right\|^2.
 \]
 
-\subsection*{Derivatives}
+\subsubsection*{Derivatives}
 Ceres Solver like most optimization packages, depends on being able to evaluate the value and the derivatives of each term in the objective function at arbitrary parameter values. Doing so correctly and efficiently is essential to getting good results. Ceres Solver provides a number of ways of doing so: Analytic and Numeric Derivatives. In order to use Automatic differentiation, it is necessary to define a \textbf{templated} cost functor\footnote{A functor is a class with an \texttt{operator()} member. And a cost functor is a functor which evaluate the residuals.}.
 
 
 
-\section{OpenCV}
+\subsection{OpenCV}
 
 OpenCV is integrated in ROS and used in many parts of this thesis, in special the function called solvePnP and Rodrigues's formula detailed next.
 
 
-\subsection{Rodrigues' formula}
+\subsubsection{Rodrigues' formula}
 
 Converts a rotation matrix to a rotation vector\footnote{This is an axis-angle representation, an using the vector module as the angle that describe the magnitude of the rotation about the axis.} and vice versa. A rotation vector is a convenient and most compact representation of a rotation matrix (since any rotation matrix has just 3 degrees of freedom).
 
@@ -276,7 +363,7 @@ Converts a rotation matrix to a rotation vector\footnote{This is an axis-angle r
 
 
 
-\subsection{SolvePnP}
+\subsubsection{SolvePnP}
 \label{sec:solvePnP}
 
 Without loss of generality, it is assumed the model plane (i.e., a checkerboard) is on $Z=0$ of the world coordinate system. Let's denote the $i^{th}$ column of the rotation matrix $R$ by $r_i$. From~(\ref{eq:pinhole}),
@@ -305,9 +392,8 @@ More precisely, SolvePnP give a solution to the \textbf{PnP problem} --the estim
 % More info: \url{http://docs.opencv.org/modules/calib3d/doc/camera_calibration_and_3d_reconstruction.html#solvepnp}
 
 
-% \subsection{Camera model with distortion}
+% \subsubsection{Camera model with distortion}
 %
-% %TODO
 % ( I will might delete this section since I don't use distortion!! )
 %
 % ROS uses the same the camera model with distortion than OpenCV, see in Figure~\ref{fig:camera_model_opencv}.
